--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
 <!-- Page Header -->
 <header class="masthead"
-        style="background-image: url('https://images.unsplash.com/photo-1484100356142-db6ab6244067?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80')">
+        style="background-image: url('https://images.unsplash.com/photo-1514064019862-23e2a332a6a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=916&q=80')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
