changed about me section

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,9 +19,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>I am from Palo Alto, California, and some of my hobbies include reading, coding, and playing chess. I go to Middle School at Crystal Springs Uplands School. I created this blog to share some helpful coding tips and also just some random thoughts!</p>
+        <p>In terms of programming I am able to code in python, HTML, CSS, and some Swift. I mainly use python but from time to time I like to create a website and then maybe create a server with Flask in python. Although I learned Swift, I don't really enjoy creating apps so I don't ever use it.</p>
+        <p>I really hope that you enjoy reading my blog posts and I look forward to hearing from you through the Contact Me page or in the comments of the blog posts. Thanks for reading my blog!</p>
       </div>
     </div>
   </div>
