--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
                     <h1>Lucas' Blog</h1>
-                    <span class="subheading">A collection of random musings.</span>
+                    <span class="subheading">A collection of tips and random thoughts.</span>
                 </div>
             </div>
         </div>
